Remove x Scrollbar + Footer Repair

--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -5,8 +5,9 @@
   position: relative;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 //
@@ -58,16 +59,15 @@
 
 // Container for Footer
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  background-color: rgb(255, 255, 255);
-  width: 100%;
-  z-index: 10;
-  flex-shrink: 0;
+  border-radius: $border-radius;
+  box-shadow: $box-shadow;
+  //box-shadow: rgb(204, 51, 51) 0px 0px 30px 10px;
+  background-color: $bg-color-navbar;
+  width: calc(100vw - (2 * 20px));
+  //z-index: 10;
+  //flex-shrink: 0;
 }
